--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "tdd": "node_modules/.bin/supervisor -w src,test,examples -q -n exit -x node_modules/.bin/gulp test",
     "test": "node ./node_modules/.bin/gulp test:node",
     "debug-tests": "node --debug-brk build/commonjs/test/test-node-specs.js -v",
-    "serve": "node ./node_modules/.bin/gulp serve",
-    "build": "node node_modules/.bin/gulp",
-    "__postinstall": "cd examples/polymer/ && ../../node_modules/.bin/bower install Polymer/polymer Polymer/core-elements Polymer/paper-elements --save && cd ../.."
+    "build": "node node_modules/.bin/gulp"
   },
   "repository": {
     "type": "git",
@@ -26,30 +24,26 @@
     "ecmascript6"
   ],
   "author": "Lars Gersmann <lars.gersmann@gmail.com> (http://www.orangevolt.com/)",
-  "license": "GPL",
+  "license": [
+    "GPL2",
+    "MIT"
+  ],
   "devDependencies": {
     "bower": "^1.3.12",
     "browserify": "^8.1.1",
-    "connect-gzip-static": "^1.0.0",
-    "connect-livereload": "^0.5.0",
     "del": "^1.1.1",
     "diary": "git://github.com/lgersman/diary.js",
     "event-stream": "^3.1.7",
-    "express": "^4.10.1",
     "gulp": "^3.8.10",
     "gulp-gzip": "0.0.8",
     "gulp-shell": "^0.2.11",
     "minijasminenode2": "^1.0.0",
-    "open": "0.0.5",
     "rtts-assert": "git://github.com/angular/assert#dist",
-    "serve-index": "^1.5.0",
     "supervisor": "^0.6.0",
     "sweet.js": "^0.7.3",
-    "tiny-lr": "^0.1.4",
     "traceur": "0.0.81",
     "uglify-js": "^2.4.16",
     "uglifyify": "^2.6.0",
-    "vinyl-source-stream": "^1.0.0",
-    "xmldom": "^0.1.19"
+    "vinyl-source-stream": "^1.0.0"
   }
 }
