--- a/package.json
+++ b/package.json
@@ -30,20 +30,20 @@
   ],
   "devDependencies": {
     "bower": "^1.3.12",
-    "browserify": "^8.1.1",
+    "browserify": "^8.1.3",
     "del": "^1.1.1",
     "diary": "git://github.com/lgersman/diary.js",
-    "event-stream": "^3.1.7",
-    "gulp": "^3.8.10",
-    "gulp-gzip": "0.0.8",
-    "gulp-shell": "^0.2.11",
+    "event-stream": "^3.2.2",
+    "gulp": "^3.8.11",
+    "gulp-gzip": "^1.0.0",
+    "gulp-shell": "^0.3.0",
     "minijasminenode2": "^1.0.0",
     "rtts-assert": "git://github.com/angular/assert#dist",
     "supervisor": "^0.6.0",
-    "sweet.js": "^0.7.3",
+    "sweet.js": "^0.7.4",
     "traceur": "0.0.81",
     "uglify-js": "^2.4.16",
-    "uglifyify": "^2.6.0",
+    "uglifyify": "^3.0.1",
     "vinyl-source-stream": "^1.0.0"
   }
 }
