--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "ampere",
     "es6",
     "gulp",
-    "ecmascript6"
+    "ecmascript6",
+    "es6"
   ],
   "author": "Lars Gersmann <lars.gersmann@gmail.com> (http://www.orangevolt.com/)",
   "license": [
@@ -32,7 +33,6 @@
     "bower": "^1.3.12",
     "browserify": "^8.1.3",
     "del": "^1.1.1",
-    "diary": "git://github.com/lgersman/diary.js",
     "event-stream": "^3.2.2",
     "gulp": "^3.8.11",
     "gulp-gzip": "^1.0.0",
