--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "traceur": "0.0.81",
     "uglify-js": "^2.4.16",
     "uglifyify": "^3.0.1",
-    "vinyl-source-stream": "^1.0.0"
+    "vinyl-source-stream": "^1.0.0",
+    "eslint": "~1.1.0",
+    "babel-eslint": "~4.0.5"
   }
 }
