--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "uglifyify": "^3.0.1",
     "vinyl-source-stream": "^1.0.0",
     "eslint": "~1.1.0",
-    "babel-eslint": "~4.0.5"
+    "babel-eslint": "~4.0.5",
+    "babel": "~5.8.21",
+    "babel-plugin-typecheck": "~1.2.0"
   }
 }
